  (Jacques Garrigue, review by Gabriel Scherer)

### Manual and documentation:

- #9430, #11291: Document the general desugaring rules for binding operators.
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11481: Fix the type of Unix.umask to Unix.file_perm -> Unix.file_perm
  (Favonia, review by Sébastien Hinderer)

### Compiler user-interface and warnings:

- #10818: Preserve integer literal formatting in type hint.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #11338: Turn some partial application warnings into hints.
  (Leo White, review by Stephen Dolan)

- #10911: Improve the location reported by parenthesized assert expressions
  (Fabian Hemmer, review by Gabriel Scherer)

### Internal/compiler-libs changes:
- #11027: Separate typing counter-examples from type_pat into retype_pat;
  type_pat is no longer in CPS.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11018: Clean up Types.Variance, adding a description of the lattice used,
  and defining explicitly composition.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
  (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)

- #11446: document switch compilation (lambda/switch.ml)
  (Gabriel Scherer, review by Luc Maranget and Vincent Laviron)

### Build system:

### Bug fixes:

- #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
  when they are not regular files.
  (Xavier Leroy, report by Thierry Martinez, review by
   Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)
- #10348: Expand GADT equations lazily during unification to avoid ambiguity
  (Jacques Garrigue, review by Leo White)

- #11436: Fix wrong stack backtrace for out-of-bound exceptions raised
  by leaf functions.
  (Tom Kelly and Xavier Leroy, review by Mark Shinwell)

OCaml 5.0
---------

### Language features:

### Runtime system:
